<resources>
    <string name="app_name">GahterUp</string>
    <string name="en">EN</string>
    <string name="slash">/</string>
    <string name="tr">TR</string>
    <string name="email_">E-mail :</string>
    <string name="password_">Password :</string>
    <string name="forgetpassword">Forgot password?</string>
    <string name="login">Login</string>
    <string name="dontyouhaveanaccount">Don\'t you have an account?</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="passwordagain">Password(Again)</string>
    <string name="policy">I accept terms of policy</string>
    <string name="emailaddress">E-mail Address</string>
    <string name="or">or</string>
    <string name="phonenumber">Phone Number</string>
    <string name="send">Send</string>
    <string name="verificationcode">Verification code will be sent</string>
    <string name="entercode">Enter code here</string>
    <string name="ok">OK</string>
    <string name="projectsforyou">Projects For You</string>
    <string name="announcements">Announcements and Shares</string>
    <string name="deadlines">Deadlines</string>
    <string name="projectname">Project Name</string>
    <string name="HomePage">HomePage</string>
    <string name="Project">Project</string>
    <string name="Message">Message</string>
    <string name="Notification">Notification</string>
    <string name="Profile">Profile</string>
    <string name="personalinfo">Personal Informations</string>
    <string name="birthdate">Birth Date</string>
    <string name="educationalinfo">Educational Information</string>
    <string name="universityname">University Name</string>
    <string name="entranceyear">Entrance Year</string>
    <string name="experiences">Experiences</string>
    <string name="year">Year</string>
    <string name="duty">Duty</string>
    <string name="position">Position</string>
    <string name="projects">Projects</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="createprojectgroup">Create Project Group</string>
    <string name="myprojects">My Projects</string>
    <string name="createaproject">Create a Project</string>
    <string name="decidename">Decide Name</string>
    <string name="howmanypeople">How many people in your project?</string>
    <string name="projectdescription">Project Description</string>
    <string name="projectneeds">Project Needs</string>
    <string name="search">Search</string>
    <string name="onlymanager">Only a manager invite</string>
    <string name="everymember">Every project member can invite</string>
    <string name="create">Create</string>
    <string name="projectschedulechart">Project Schedule Chart</string>
    <string name="deadline_">Deadline :</string>
    <string name="tasks_">Tasks :</string>
    <string name="projectnotes">Project Notes</string>
    <string name="completed">Completed</string>
    <string name="support">Support</string>
    <string name="anyquestions">Any questions or problems regarding the system, please contact us.</string>
    <string name="helpdesk">helpdesk@gatherup.com.tr</string>
    <string name="creditsandreferences">Credits and References</string>
    <string name="messages">Messages</string>
    <string name="plus">+</string>
    <string name="addmore">Add</string>
    <string name="abilities_interest">Abilities/Interests</string>
    <string name="requiredfields">All fields are required</string>
    <string name="EN_selected">English Selected</string>
    <string name="TR_selected">Türkçe Seçildi</string>
    <string name="success_registration">Registration is successful</string>
    <string name="failed_registration">Registration failed</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_surname">Enter surname</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Password too short, enter minimum 6 characters</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="password_match">Both password fields must be identical</string>
    <string name="accept_policy">You have not accepted the policy terms</string>
    <string name="failed">Failed</string>
    <string name="name_">Name :</string>
    <string name="surname_">Surname :</string>
    <string name="birthdate_">Birth Date :</string>
    <string name="universityname_">University Name :</string>
    <string name="entranceyear_">Entrance Year :</string>
    <string name="year_">Year :</string>
    <string name="duty_">Duty :</string>
    <string name="position_">Position :</string>
    <string name="projectname_">Project Name :</string>
    <string name="description_">Description :</string>
    <string name="numberofpeople_">Number of People :</string>
    <string name="projectneeds_">Project Needs :</string>
    <string name="enterprojectname">Enter the project name</string>
    <string name="enterparticipant">Enter the number of participants</string>
    <string name="enterprojectdescription">Enter the project description</string>
    <string name="enterprojectneeds">Enter the project needs</string>
    <string name="error_">Error :</string>
    <string name="checkemail">Check your email</string>
    <string name="editproject">Edit Project</string>
    <string name="inbox">Inbox</string>
    <string name="users">Users</string>
    <string name="projectusers_">Project Users :</string>
    <string name="apply">Apply</string>
    <string name="invite">Invite</string>
    <string name="acceptoffer">Do you accept the offer?</string>
    <string name="acceptpartition">Do you accept participation?</string>
    <string name="accept">Accept</string>
    <string name="rejectproject">You rejected the project.</string>
    <string name="reject">Reject</string>
    <string name="acceptproject">You accepted the project.</string>
    <string name="acceptparticipation">You have accepted participation.</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
