<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_homepage"
        android:icon="@drawable/homepage"
        android:title="@string/HomePage"/>

    <item
        android:id="@+id/navigation_projects"
        android:icon="@drawable/project"
        android:title="@string/Project"/>

    <item
        android:id="@+id/navigation_messages"
        android:icon="@drawable/message"
        android:title="@string/Message"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/notification"
        android:title="@string/Notification"/>

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile"
        android:title="@string/Profile"/>
</menu>