<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Support">

    <TextView
        android:id="@+id/support_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/support"
        android:textColor="@color/Black" />

    <ScrollView
        android:id="@+id/support_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/support_navigation"
        android:layout_below="@id/support_title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/support_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/anyquestions"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/support_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/support_description"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/email_"
                android:textColor="@color/Black" />

            <TextView
                android:id="@+id/support_helpdesk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/support_description"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_toEndOf="@id/support_email"
                android:text="@string/helpdesk" />

            <TextView
                android:id="@+id/support_creditsandreferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/support_helpdesk"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/creditsandreferences"
                android:textColor="@color/Black" />

        </RelativeLayout>
    </ScrollView>


    <FrameLayout
        android:id="@+id/support_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

    </FrameLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/support_navigation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:itemBackground="@color/Blue"
        app:itemIconTint="@android:color/white"
        app:itemTextColor="@android:color/white"
        app:labelVisibilityMode="unlabeled"
        app:menu="@menu/navigation" />

</RelativeLayout>